# scratchpad

./: Entropy of a Large Language Model output.ipynb  GameOfLife.html  Trade cost optimization.ipynb  anharmonic-perturbation-qm.ipynb  floyds-tortoise-hare.py  neural-network-numpy.ipynb  regret-minimization-nash-rps.ipynb
central-limit-theorem/: .gitignore  README.md  clt.ipynb  clt.py  pyproject.toml
corona-visualization-r/: README.md  server.R  ui.R
