[project]
name = "CentralLimitTheorem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "tqdm>=4.67.0",
]
